--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/sql.jpg" alt="" /></a>
+									<a href="SQL Codes.html" class="image"><img src="images/sql.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">SQL Codes</h2>
 										<p>Have a look at all my SQL Codes and my analysis and cleaning of different datasets.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="SQL Codes.html" class="special">View All Codes</a>
 									</div>
 								</div>
 							</section>
@@ -65,11 +65,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/Tableau.png" alt="" /></a>
+									<a href="Tableau viz.html" class="image"><img src="images/Tableau.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Tableau Dashboards</h2>
 										<p>With the use of this awesome visaulization tool, I have interpreted my datasets after my analysis and cleaning.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="Tableau viz.html" class="special">View All Visualizations</a>
 									</div>
 								</div>
 							</section> 
@@ -77,11 +77,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/Python.jpeg" alt="" /></a>
+									<a href="Python Codes.html" class="image"><img src="images/Python.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Python Codes</h2>
 										<p>Have a look at all my Python Codes and my analysis and cleaning of different datasets.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="Python Codes.html" class="special">View All Codes</a>
 									</div>
 								</div>
 							</section>
@@ -99,10 +99,10 @@
 											<a href="Diabetes.html" class="special">Have a look</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Upcoming Project!</h3>
-											<p>Analyzing new data,Come back for updates.</p>
-										<!--	<a href="#" class="special">Have a look</a> -->
+											<a href="Bakery Sales.html" class="image"><img src="images/Bakery/bakery-products.jpg" alt="" /></a>
+											<h3 class="major">Bakery Sales Analysis</h3>
+											<p>The objective of this project is to forecast the sales of products in order to ease the production planning. Have a look at how I analyzed the data.</p>
+											<a href="Bakery Sales.html" class="special">Have a look</a> 
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
