--- a/Python Codes.html
+++ b/Python Codes.html
@@ -61,9 +61,9 @@
 
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3 class="major">Coming Soon</h3>
-											<p>Working on It!</p>
+											<a href="https://github.com/Adine24/Data-Analysis---Portfolio/blob/main/2%20SF%20Salaries%20Project/SF%20Salaries_Project.ipynb" class="image"><img src="images/SF/Sf.jpg" alt="" /></a>
+											<h3 class="major">San Francisco Exploratory Analysis</h3>
+											<p>SanFrancisco salaries dataset from 2011-2014, from this EDA, you can decide on which job meets your requirements and make a firm decision. </p>
 										<!--	<a href="#" class="special">See Code</a> -->
 										</article>
 										<article>
