--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Orhine Adidi - Portfolio</h2>
-							<p>Aspiring Data Analyst with Excel,SQL,Tableau and Python Skills <a href=""></a></p>
+							<p>Data Analyst with experience with Excel, SQL, Tableau and Python <a href=""></a></p>
 						</div>
 					</section>
 
@@ -105,9 +105,9 @@
 											<a href="Bakery Sales.html" class="special">Have a look</a> 
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Upcoming Project!</h3>
-											<p>Analyzing new data,Come back for updates.</p>
+											<a href="SF Salaries_Project.html" class="image"><img src="images/SF/Sf.jpg" alt="" /></a>
+											<h3 class="major">San Francisco Exploratory Analysis</h3>
+											<p>SanFrancisco salaries dataset from 2011-2014, from this EDA, you can decide on which job meets your requirements and make a firm decision.</p>
 										<!--	<a href="#" class="special">Have a look</a> -->
 										</article>
 										<article>
