--- a/Python Codes.html
+++ b/Python Codes.html
@@ -64,13 +64,20 @@
 											<a href="https://github.com/Adine24/Data-Analysis---Portfolio/blob/main/2%20SF%20Salaries%20Project/SF%20Salaries_Project.ipynb" class="image"><img src="images/SF/Sf.jpg" alt="" /></a>
 											<h3 class="major">San Francisco Exploratory Analysis</h3>
 											<p>SanFrancisco salaries dataset from 2011-2014, from this EDA, you can decide on which job meets your requirements and make a firm decision. </p>
-										<!--	<a href="#" class="special">See Code</a> -->
+											<a href="https://github.com/Adine24/Data-Analysis---Portfolio/blob/main/2%20SF%20Salaries%20Project/SF%20Salaries_Project.ipynb" class="special">See Code</a> 
 										</article>
 										<article>
+											<a href="https://github.com/Adine24/Data-Analysis---Portfolio/tree/main/Mcdonalds%20Analysis" class="image"><img src="images/Mcdonald/McD.png" alt="" /></a>
+											<h3 class="major">Mcdonald's Nutrition Analysis</h3>
+											<p>McDonald's Dataset provides a Nutrition Analysis of every menu item on the US McDonald's menu. With this data, we can Analyze 
+												subjects like, what beverages contribute to our calorie intake?, we can know if ordering egg whites instead of whole eggs affects the
+												level of nutritional value and also which food item on the McDonald's menu offers us the most %daily nutrient value and lots more!.</p>
+											<a href="https://github.com/Adine24/Data-Analysis---Portfolio/tree/main/Mcdonalds%20Analysis" class="special">See Code</a>
+										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3 class="major">Coming Soon</h3>
+											<h3 class="major">Coming Soon!</h3>
 											<p>Working on It!</p>
-										<!--	<a href="#" class="special">See Code</a> -->
+										<!--- <a href="#" class="special">See Code</a> -->
 										</article>
 									<!--	<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
