--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
 										<!--	<a href="#" class="special">Have a look</a> -->
 										</article>
 										<article>
+											<a href="McDonald's Nutrition Facts Project.html" class="image"><img src="images/Mcdonald/McD.png" alt="" /></a>
+											<h3 class="major">Mcdonald's Nutrition Analysis</h3>
+											<p>McDonald's Dataset provides a Nutrition Analysis of every menu item on the US McDonald's menu. With this data, we can Analyze 
+												subjects like, what beverages contribute to our calorie intake?, we can know if ordering egg whites instead of whole eggs affects the
+												level of nutritional value and also which food item on the McDonald's menu offers us the most %daily nutrient value and lots more!.</p>
+										<!--	<a href="#" class="special">Have a look</a> -->
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<h3 class="major">Upcoming Project!</h3>
+											<p>Analyzing new data,Come back for updates.</p>
+										<!--	<a href="#" class="special">Have a look</a> -->
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">Upcoming Project!</h3>
 											<p>Analyzing new data,Come back for updates.</p>
